--- a/about.html
+++ b/about.html
@@ -1,27 +1,109 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>عن الموقع | F1 Movie</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title & Description -->
+  <title>عن فيلم F1 – تفاصيل وأحداث</title>
+  <meta name="description" content="تعرف على المزيد عن فيلم F1 الجديد لعام 2025: القصة، الأبطال، والكواليس." />
+
+  <!-- Keywords -->
+  <meta name="keywords" content="فيلم F1, عن فيلم F1, أبطال فيلم F1, تفاصيل فيلم F1" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="عن فيلم F1 – تفاصيل وأحداث" />
+  <meta property="og:description" content="معلومات تفصيلية عن فيلم F1 الجديد وأحداثه المثيرة." />
+  <meta property="og:image" content="https://mvstafasobhi0-arch.github.io/f1-website/f1poster.jpg" />
+  <meta property="og:url" content="https://mvstafasobhi0-arch.github.io/f1-website/about.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="عن فيلم F1 – تفاصيل وأحداث" />
+  <meta name="twitter:description" content="تعرف على قصة فيلم F1 الجديد وأبطاله وكواليسه." />
+  <meta name="twitter:image" content="https://mvstafasobhi0-arch.github.io/f1-website/f1poster.jpg" />
+
   <style>
-    body {font-family: 'Cairo', sans-serif; background:#f5f5f5; margin:0; padding:0; color:#333;}
-    header {background:linear-gradient(90deg,#ff1e00,#111); color:#fff; padding:1rem; text-align:center;}
-    main {max-width:800px; margin:auto; background:#fff; padding:1.5rem; margin-top:1.5rem; border-radius:12px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
-    footer {background:#111; color:#ddd; text-align:center; padding:1rem; margin-top:2rem;}
-    footer a {color:#ff4c3b; text-decoration:none;}
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      direction: rtl;
+      text-align: right;
+    }
+    header {
+      background: #111;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    nav {
+      background: #222;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+    }
+    section {
+      padding: 20px;
+    }
+    footer {
+      background: #111;
+      color: #ccc;
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
+
+  <!-- Header -->
   <header>
-    <h1>عن موقعنا</h1>
+    <h1>عن فيلم F1</h1>
+    <p>كل ما تحتاج معرفته عن فيلم F1 الجديد لعام 2025</p>
   </header>
-  <main>
-    <p>تم إنشاء هذا الموقع بهدف تقديم محتوى مميز عن الأفلام الجديدة والترندات السينمائية. نركز على عرض التفاصيل الرسمية مثل القصة، التريلر، والممثلين بدون أي محتوى مقرصن.</p>
-    <p>هدفنا أن نكون مصدرًا سريعًا ومبسطًا لعشاق السينما لمتابعة أحدث الأخبار.</p>
-  </main>
+
+  <!-- Navigation -->
+  <nav>
+    <a href="index.html">الرئيسية</a>
+    <a href="about.html">عن الفيلم</a>
+    <a href="contact.html">تواصل معنا</a>
+    <a href="privacy.html">سياسة الخصوصية</a>
+  </nav>
+
+  <!-- Main Section -->
+  <section>
+    <h2>نبذة عن الفيلم</h2>
+    <p>
+      فيلم F1 هو عمل سينمائي ضخم لعام 2025 يركز على الإثارة، السرعة، والتحديات التي يواجهها الأبطال.
+    </p>
+
+    <h2>فريق العمل</h2>
+    <p>
+      يضم الفيلم مجموعة من ألمع النجوم، ويخرجه واحد من أبرز المخرجين في الساحة السينمائية.
+    </p>
+
+    <h2>كواليس الإنتاج</h2>
+    <p>
+      تم تصوير الفيلم في عدة مواقع عالمية باستخدام أحدث التقنيات السينمائية ليقدم تجربة بصرية مذهلة للجمهور.
+    </p>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>© 2025 جميع الحقوق محفوظة</p>
+    <p>© 2025 فيلم F1. جميع الحقوق محفوظة.</p>
   </footer>
+
 </body>
 </html>
+
