--- a/privacy.html
+++ b/privacy.html
@@ -1,28 +1,136 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>سياسة الخصوصية | F1 Movie</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title & Description -->
+  <title>سياسة الخصوصية – فيلم F1</title>
+  <meta name="description" content="تعرف على سياسة الخصوصية الخاصة بموقع فيلم F1 وكيفية حماية بياناتك." />
+
+  <!-- Keywords -->
+  <meta name="keywords" content="سياسة الخصوصية, فيلم F1, خصوصية البيانات, حماية البيانات" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="سياسة الخصوصية – فيلم F1" />
+  <meta property="og:description" content="نلتزم في موقع فيلم F1 بحماية خصوصية المستخدمين والبيانات الخاصة بهم." />
+  <meta property="og:image" content="https://mvstafasobhi0-arch.github.io/f1-website/f1poster.jpg" />
+  <meta property="og:url" content="https://mvstafasobhi0-arch.github.io/f1-website/privacy.html" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="سياسة الخصوصية – فيلم F1" />
+  <meta name="twitter:description" content="موقع فيلم F1 يوضح سياسة الخصوصية الخاصة بحماية بياناتك." />
+  <meta name="twitter:image" content="https://mvstafasobhi0-arch.github.io/f1-website/f1poster.jpg" />
+
   <style>
-    body {font-family: 'Cairo', sans-serif; background:#f5f5f5; margin:0; padding:0; color:#333;}
-    header {background:linear-gradient(90deg,#ff1e00,#111); color:#fff; padding:1rem; text-align:center;}
-    main {max-width:800px; margin:auto; background:#fff; padding:1.5rem; margin-top:1.5rem; border-radius:12px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
-    footer {background:#111; color:#ddd; text-align:center; padding:1rem; margin-top:2rem;}
-    footer a {color:#ff4c3b; text-decoration:none;}
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      direction: rtl;
+      text-align: right;
+    }
+    header {
+      background: #111;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    nav {
+      background: #222;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+    }
+    section {
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h2 {
+      color: #333;
+      margin-top: 20px;
+    }
+    footer {
+      background: #111;
+      color: #ccc;
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
+
+  <!-- Header -->
   <header>
     <h1>سياسة الخصوصية</h1>
+    <p>خصوصية زوارنا تهمنا</p>
   </header>
-  <main>
-    <p>نحن نحترم خصوصية زوارنا. قد يستخدم الموقع ملفات تعريف الارتباط (Cookies) لأغراض إحصائية وتحسين تجربة المستخدم.</p>
-    <p>قد يتم عرض إعلانات من طرف ثالث (مثل Google AdSense) والتي تستخدم ملفات تعريف الارتباط لتقديم إعلانات مخصصة بناءً على اهتماماتك.</p>\n    <p>باستخدامك هذا الموقع فإنك توافق على سياسة الخصوصية هذه.</p>
-    <p>للاستفسار يمكنكم التواصل عبر البريد: example@example.com</p>
-  </main>
+
+  <!-- Navigation -->
+  <nav>
+    <a href="index.html">الرئيسية</a>
+    <a href="about.html">عن الفيلم</a>
+    <a href="contact.html">تواصل معنا</a>
+    <a href="privacy.html">سياسة الخصوصية</a>
+  </nav>
+
+  <!-- Main Section -->
+  <section>
+    <h2>مقدمة</h2>
+    <p>
+      نحن في موقع فيلم F1 نحترم خصوصية بياناتك الشخصية ونسعى لحمايتها بكل الوسائل الممكنة.
+    </p>
+
+    <h2>جمع البيانات</h2>
+    <p>
+      قد نقوم بجمع بعض المعلومات مثل البريد الإلكتروني أو الاسم عند استخدامك لنموذج التواصل.
+    </p>
+
+    <h2>استخدام البيانات</h2>
+    <p>
+      نستخدم البيانات التي تقدمها فقط للرد على استفساراتك وتقديم الدعم اللازم.
+    </p>
+
+    <h2>الكوكيز</h2>
+    <p>
+      قد يستخدم موقعنا ملفات تعريف الارتباط (Cookies) لتحسين تجربتك وتخصيص المحتوى.
+    </p>
+
+    <h2>حماية البيانات</h2>
+    <p>
+      نحن نتخذ جميع الإجراءات الأمنية لحماية بياناتك من أي وصول غير مصرح به.
+    </p>
+
+    <h2>تغييرات على السياسة</h2>
+    <p>
+      قد نقوم بتحديث سياسة الخصوصية من وقت لآخر، وسيتم نشر أي تغييرات على هذه الصفحة.
+    </p>
+
+    <h2>التواصل معنا</h2>
+    <p>
+      إذا كان لديك أي أسئلة حول سياسة الخصوصية، يمكنك التواصل معنا عبر صفحة
+      <a href="contact.html">تواصل معنا</a>.
+    </p>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>© 2025 جميع الحقوق محفوظة</p>
+    <p>© 2025 فيلم F1. جميع الحقوق محفوظة.</p>
   </footer>
+
 </body>
 </html>
+
