--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       text-align: right;
     }
     header {
-      background: #111;
+      background: #e10600;
       color: #fff;
       padding: 20px;
       text-align: center;
@@ -64,7 +64,7 @@
       font-size: 2rem;
     }
     nav {
-      background: #222;
+      background: #e10600;
       padding: 10px;
       text-align: center;
     }
@@ -77,8 +77,8 @@
       padding: 20px;
     }
     footer {
-      background: #111;
-      color: #ccc;
+      background: #222;
+      color: #aaa;
       text-align: center;
       padding: 15px;
       font-size: 0.9rem;
@@ -129,6 +129,7 @@
 
 </body>
 </html>
+
 
 
 
