--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       فيلم F1 هو أحد أكثر الأفلام المنتظرة في 2025. تدور أحداثه حول السرعة، المنافسة، 
       والإصرار على النجاح مهما كانت التحديات. الفيلم يجمع بين الأكشن والدراما بطريقة شيقة.
     </p>
-    <img src="https://m.media-amazon.com/images/M/MV5BZTYwYjJhNzYtY2ZiZS00ZmYxLWJkZjctYjRlNGIxYjI3ZTU0XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="بوستر فيلم F1: The Movie 2025" class="movie-poster">
+    <img src="https://m.media-amazon.com/images/M/MV5BZTYwYjJhNzYtY2ZiZS00ZmYxLWJkZjctYjRlNGIxYjI3ZTU0XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="بوستر فيلم F1: The Movie 2025" class="movie-poster"position=center/>
 
     <h2>أبطال الفيلم</h2>
     <ul>
@@ -130,6 +130,7 @@
 
 </body>
 </html>
+
 
 
 
